--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
 	font: 300 18px/1.8 "Lato Light", sans-serif;
 	text-align: left;
 	letter-spacing: 0.05;
-
+	opacity: 0.7;
 }
 
 .ba-firstletter {
